Patch: corrected stream collection